--- a/src/main/features/testing-support/views/delete-drafts.njk
+++ b/src/main/features/testing-support/views/delete-drafts.njk
@@ -25,6 +25,9 @@
         <div class="notice">
           {{ linkButton('Delete mediation drafts', 'action[mediation]', 'button button-secondary') }}
         </div>
+        <div class="notice">
+          {{ linkButton('Delete DQ drafts', 'action[directionsQuestionnaire]', 'button button-secondary') }}
+        </div>
       </form>
     </div>
   </div>
