--- a/src/main/features/claim/views/total.njk
+++ b/src/main/features/claim/views/total.njk
@@ -56,7 +56,7 @@
             </tbody>
           </table>
 
-          <p>{{ t('If you settle out of court we won’t refund your claim fee. You can ask the defendnat to pay back your claim fee as part of the settlement.') }}</p>
+          <p>{{ t('If you settle out of court we won’t refund your claim fee. You can ask the defendant to pay back your claim fee as part of the settlement.') }}</p>
 
           <table class="table-form form-group">
             <caption class="visuallyhidden"></caption>
