--- a/src/main/features/directions-questionnaire/views/support-required.njk
+++ b/src/main/features/directions-questionnaire/views/support-required.njk
@@ -3,7 +3,7 @@
 {% from "date.njk" import dateInput %}
 {% from "form.njk" import yesNoRadio %}
 
-{% set heading = t('Select any support you’d require for a court hearing (optional)?') %}
+{% set heading = t('Select any support you’d require for a court hearing (optional)') %}
 
 {% block content %}
   <div class="grid-row">
@@ -11,7 +11,12 @@
       <form method="post" class="analytics-submit-event-trigger" data-event-action="DQ: Support Required" novalidate>
         {{ csrfProtection(csrf) }}
         {% set error = form.hasErrors() %}
-        <fieldset id="" class="form-group {% if error %} form-group-error {% endif %}">
+        <fieldset id="supportRequired" class="form-group {% if error %} form-group-error {% endif %}">
+          <legend>
+            <span class="visuallyhidden">
+              {{ t('Select any support you’d require for a court hearing (optional)') }}
+            </span>
+          </legend>
           {% call expandableCheckboxOption(form = form, name = 'languageSelected', value = 'true', label = "Language Interpreter", checked = form.valueFor('languageSelected')) %}
             {{ textInput(label = t('What language needs to be interpreted?'), hint = t('You’ll have to arrange and pay for interpreters except for Welsh.'), form = form, name = 'languageInterpreted', inputClass = '') }}
           {% endcall %}
@@ -33,7 +38,7 @@
 {% macro expandableCheckboxOption(form, name, value, checked = false, label, hint = '', bold = false, additionalClasses = undefined) %}
   {% set expandablePanelId = name + '-' + value | replace(' ', '') %}
     {{ option(form = form, name = name, value = value, type = 'checkbox', checked = checked, label = label, hint = hint, bold = bold, hidden = true, className = 'expandable', dataTarget = expandablePanelId) }}
-    <div class="form-group panel panel-border-narrow js-hidden {{ ' ' + additionalClasses if additionalClasses }}" id="{{ expandablePanelId }}">
+    <div class="form-group panel panel-border-wide js-hidden {{ ' ' + additionalClasses if additionalClasses }}" id="{{ expandablePanelId }}">
       {{ caller() }}
     </div>
 {% endmacro %}
