Code review changes

--- a/src/main/features/directions-questionnaire/views/hearing-exceptional-circumstances.njk
+++ b/src/main/features/directions-questionnaire/views/hearing-exceptional-circumstances.njk
@@ -4,7 +4,7 @@
 
 {% if party === MadeBy.CLAIMANT %}
   {% set courtName = 'Placeholder court name' %}
-  {% set heading = t('The hearing will be held at {{ courtName }}?', { courtName: courtName }) %}
+  {% set heading = t('The hearing will be held at {{ courtName }}', { courtName: courtName }) %}
 {% else %}
   {% set heading = t('The hearing will be held at the claimant’s chosen court') %}
 {% endif %}
@@ -19,7 +19,7 @@
         {{ csrfProtection(csrf) }}
 
         {% set error = form.hasErrors() %}
-        <fieldset id="option[label]" class="form-group {% if error %} form-group-error {% endif %}">
+        <fieldset id="exceptionalCircumstances[label]" class="form-group {% if error %} form-group-error {% endif %}">
           <legend>
             <span class="visuallyhidden">
               {{ t('Are there exceptional circumstances (like accessibility needs) which mean you want to ask for the hearing to be held at a different location?') }}
@@ -28,13 +28,13 @@
 
           <p>{{ t('Are there exceptional circumstances (like accessibility needs) which mean you want to ask for the hearing to be held at a different location?') }}</p>
           {{
-          radioOption(form = form, label = 'Yes', name = 'option', value = YesNoOption.YES.option, checked = form.valueFor('option').option === YesNoOption.YES.option, bold = true)
+          radioOption(form = form, label = 'Yes', name = 'exceptionalCircumstances', value = YesNoOption.YES.option, checked = form.valueFor('exceptionalCircumstances').option === YesNoOption.YES.option, bold = true)
           }}
-          <div class="form-group panel panel-border-narrow js-hidden " id="option-yes" aria-hidden="false">
+          <div class="form-group panel panel-border-narrow js-hidden " id="exceptionalCircumstances-yes" aria-hidden="false">
             {{ textArea(label = t('Briefly explain your reasons'), form = form, name = 'reason', inputClass = 'form-control-3-4') }}
           </div>
           {{
-          radioOption(form = form, label = 'No', name = 'option', value = YesNoOption.NO.option, checked = form.valueFor('option').option === YesNoOption.NO.option, bold = true)
+          radioOption(form = form, label = 'No', name = 'exceptionalCircumstances', value = YesNoOption.NO.option, checked = form.valueFor('exceptionalCircumstances').option === YesNoOption.NO.option, bold = true)
           }}
 
         </fieldset>
