Using the LocalDate structure as much as possible

--- a/src/main/features/directions-questionnaire/views/components/date-list.njk
+++ b/src/main/features/directions-questionnaire/views/components/date-list.njk
@@ -7,7 +7,9 @@
       <div id="add-another-list-items-{{ loop.index0 }}">
         <dd class="add-another-list-item">
           <span data-index="items-{{ loop.index0 }}">{{ date | date }}</span>
-          <input type="hidden" name="unavailableDates[{{ loop.index0 }}]" value="{{ date }}"/>
+          <input type="hidden" name="unavailableDates[{{ loop.index0 }}][year]" value="{{ date.year() }}"/>
+          <input type="hidden" name="unavailableDates[{{ loop.index0 }}][month]" value="{{ date.month() + 1 }}"/>
+          <input type="hidden" name="unavailableDates[{{ loop.index0 }}][day]" value="{{ date.date() }}"/>
         </dd>
         <dd class="add-another-list-controls">
           {{ internalLink(t('Remove'),
