following best practice for apostrophes and quotes

--- a/src/main/features/dashboard/views/macro/claimStatus/ccjEligible.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/ccjEligible.njk
@@ -11,7 +11,7 @@
     <p>{{ t('{{ defendantName }} has not responded to your claim by the deadline. '
         + 'You can request a County Court Judgment (CCJ) against them.',
         { defendantName : defendantName }) }}</p>
-    <p>{{ t("The court will order them to pay the money. It doesn't guarantee that they'll pay it.") }}</p>
+    <p>{{ t('The court will order them to pay the money. It doesn’t guarantee that they’ll pay it.') }}</p>
     <p>{{ t('{{ defendantName }} can still respond to the claim until you request a CCJ.',
         { defendantName : defendantName }) }}</p>
     <form novalidate method="post">
