--- a/src/main/features/directions-questionnaire/views/hearing-dates.njk
+++ b/src/main/features/directions-questionnaire/views/hearing-dates.njk
@@ -1,5 +1,6 @@
 {% extends "layout.njk" %}
-{% from "form.njk" import csrfProtection, saveAndContinueButton, radioGroup %}
+{% from "form.njk" import csrfProtection, saveAndContinueButton, radioGroup, linkButton %}
+{% from "date.njk" import dateInput %}
 
 {% set heading = 'Are there dates in the next 9 months when you or your witnesses can’t go to a hearing?' %}
 
@@ -8,13 +9,14 @@
   <script src="{{ asset_paths['js_vendor'] }}/lodash.js"></script>
   <script src="{{ asset_paths['js_vendor'] }}/bootstrap-datepicker.js"></script>
   <script src="{{ asset_paths['js'] }}/date-picker.js"></script>
-  <link rel="stylesheet" href="{{ asset_paths['style_vendor'] }}/bootstrap-datepicker3.standalone.css" />
+  <link rel="stylesheet" href="{{ asset_paths['style_vendor'] }}/bootstrap-datepicker3.standalone.css"/>
 {% endblock %}
 
 {% block content %}
   <div class="grid-row">
     <div class="column-two-thirds">
-      <form method="post" class="analytics-submit-event-trigger" data-event-action="DQ: Hearing Unavailability Dates" data-event-label-from="availability" novalidate>
+      <form method="post" class="analytics-submit-event-trigger" data-event-action="DQ: Hearing Unavailability Dates"
+            data-event-label-from="availability" novalidate>
         {{ csrfProtection(csrf) }}
         {{ radioGroup(
           name = 'hasUnavailableDates',
@@ -29,7 +31,14 @@
         <div class="panel panel-border-narrow js-hidden" id="hasUnavailableDates-true" aria-hidden="false">
           <h2 class="heading-medium">{{ t('Select the dates you can’t go to a hearing') }}</h2>
           <p>{{ t('These should only be the dates of important events like medical appointments, other court hearings or holidays.') }}</p>
-          <div id="date-picker" class="datepicker"></div>
+          <div id="date-picker" class="datepicker">
+            <noscript>
+              <div>
+                {{ dateInput('newDate', form, hint = '') }}
+                {{ linkButton('Add', 'addDate', 'link-button') }}
+              </div>
+            </noscript>
+          </div>
           <div id="date-selection-wrapper">
             {% include '../views/components/date-list.njk' %}
           </div>
