--- a/src/main/public/stylesheets/components/_date-picker.scss
+++ b/src/main/public/stylesheets/components/_date-picker.scss
@@ -85,6 +85,7 @@ $black: #000;
               &.focused {
                 &:not(.disabled) {
                   background-color: $day-cell-hover-colour;
+                  color: $black;
                 }
               }
             }
