--- a/src/main/public/stylesheets/components/_date-picker.scss
+++ b/src/main/public/stylesheets/components/_date-picker.scss
@@ -126,7 +126,7 @@ $black: #000;
 }
 
 @media (min-width: 641px) and (max-width: 750px) {
-  datepicker {
+  .datepicker {
     table {
       width: 120%;
     }
