--- a/src/main/features/directions-questionnaire/views/support-required.njk
+++ b/src/main/features/directions-questionnaire/views/support-required.njk
@@ -3,7 +3,7 @@
 {% from "date.njk" import dateInput %}
 {% from "form.njk" import yesNoRadio %}
 
-{% set heading = t('Select any support you’d require for a court hearing (optional)') %}
+{% set heading = 'Select any support you’d require for a court hearing (optional)' %}
 
 {% block content %}
   <div class="grid-row">
@@ -18,15 +18,15 @@
             </span>
           </legend>
           {% call expandableCheckboxOption(form = form, name = 'languageSelected', value = 'true', label = "Language Interpreter", checked = form.valueFor('languageSelected')) %}
-            {{ textInput(label = t('What language needs to be interpreted?'), hint = t('You’ll have to arrange and pay for interpreters except for Welsh.'), form = form, name = 'languageInterpreted', inputClass = '') }}
+            {{ textInput(label = 'What language needs to be interpreted?', hint = t('You’ll have to arrange and pay for interpreters except for Welsh.'), form = form, name = 'languageInterpreted', inputClass = '') }}
           {% endcall %}
           {% call expandableCheckboxOption(form = form, name = 'signLanguageSelected', value = 'true', label = t('Sign Language Interpreter'), checked = form.valueFor('signLanguageSelected')) %}
-            {{ textInput(label = t('Enter the sign language you need'), form = form, name = 'signLanguageInterpreted', inputClass = '') }}
+            {{ textInput(label = 'Enter the sign language you need', form = form, name = 'signLanguageInterpreted', inputClass = '') }}
           {% endcall %}
           {{ option(form = form, name = 'hearingLoopSelected', value = 'true', type = 'checkbox', checked = form.valueFor('hearingLoopSelected'), label = t('Hearing Loop')) }}
           {{ option(form = form, name = 'disabledAccessSelected', value = 'true', type = 'checkbox', checked = form.valueFor('disabledAccessSelected'), label = t('Disabled Access')) }}
           {% call expandableCheckboxOption(form = form, name = 'otherSupportSelected', value = 'true', label = 'Other support', checked = form.valueFor('otherSupportSelected')) %}
-            {{ textArea(label = t('Explain the other support you need at your hearing'), form = form, name = 'otherSupport') }}
+            {{ textArea(label = 'Explain the other support you need at your hearing', form = form, name = 'otherSupport') }}
           {% endcall %}
         </fieldset>
         {{ saveAndContinueButton() }}
