--- a/src/main/public/stylesheets/components/_colours.scss
+++ b/src/main/public/stylesheets/components/_colours.scss
@@ -1,2 +1,7 @@
 $light-blue: #eef7ff;
 $expandable-background: $light-blue;
+
+$day-cell-hover-colour: #bbd9e9;
+$day-cell-active-colour: #76b2d2;
+$selected-dates-separator-colour: #bfc1c3;
+$black: #000;
