--- a/src/main/features/directions-questionnaire/views/hearing-dates.njk
+++ b/src/main/features/directions-questionnaire/views/hearing-dates.njk
@@ -17,6 +17,7 @@
     <div class="column-two-thirds">
       <form method="post" class="analytics-submit-event-trigger" data-event-action="DQ: Hearing Unavailability Dates"
             data-event-label-from="availability" novalidate>
+        <pre>{{ form.valueFor('hasUnavailableDates') | default('missing') }}</pre>
         {{ csrfProtection(csrf) }}
         {{ radioGroup(
           name = 'hasUnavailableDates',
@@ -31,7 +32,7 @@
         <div class="panel panel-border-narrow js-hidden" id="hasUnavailableDates-true" aria-hidden="false">
           <h2 class="heading-medium">{{ t('Select the dates you can’t go to a hearing') }}</h2>
           <p>{{ t('These should only be the dates of important events like medical appointments, other court hearings or holidays.') }}</p>
-          <div id="date-picker" class="datepicker">
+          <div id="date-picker" class="datepicker datepicker-wrapper">
             <noscript>
               {{ dateInput('newDate', form, hint = '') }}
               {{ linkButton('Add', 'addDate', 'button button-secondary') }}
